Add Flask fallback shim and fix frontend import/type errors

--- a/wingo-bets/index.html
+++ b/wingo-bets/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/wingo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WINGO Bets - Runner's Betting Platform</title>
-    <meta name="description" content="Bet on running events with WINGO - the runner's cryptocurrency" />
+    <title>WINGO - Where Workout Independence is Always 320 Meters Away</title>
+    <meta name="description" content="A Decentralized Network for Runners" />
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
   </head>
   <body>
