--- a/wingo-bets/index.html
+++ b/wingo-bets/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/wingo.svg" />
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>WINGO - Where Workout Independence is Always 320 Meters Away</title>
     <meta name="description" content="A Decentralized Network for Runners" />
